--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
     <title>Template Create By Self</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="_j_root"></div>
 </body>
 </html>
